--- a/package.json
+++ b/package.json
@@ -34,9 +34,6 @@
   "bugs": {
     "url": "https://github.com/Fisht-Org/FishtVue/issues"
   },
-  "peerDependencies": {
-    "vue": "^3.3.x"
-  },
   "devDependencies": {
     "@babel/eslint-parser": "^7.24.7",
     "@babel/preset-env": "^7.24.7",
@@ -71,6 +68,9 @@
     "vue-tsc": "^2.0.21"
   },
   "dependencies": {
-    "@heroicons/vue": "^2.1.3"
+    "@heroicons/vue": "^2.1.3",
+    "clsx": "^2.1.1",
+    "tailwind-merge": "^2.3.0",
+    "vue": "^3.3.x"
   }
 }
