feat(theme): the primary architecture of the project has been configured

--- a/lib/config/package.json
+++ b/lib/config/package.json
@@ -1,6 +1,5 @@
 {
-  "main": "./config.cjs.js",
-  "module": "./config.esm.js",
-  "unpkg": "./config.min.js",
+  "main": "./config.mjs",
+  "module": "./config.mjs",
   "types": "./FishtVue.d.ts"
 }
