--- a/lib/utils/package.json
+++ b/lib/utils/package.json
@@ -1,6 +1,5 @@
 {
-  "main": "./utils.cjs.js",
-  "module": "./utils.esm.js",
-  "unpkg": "./utils.min.js",
+  "main": "./utils.mjs",
+  "module": "./utils.mjs",
   "types": "./Utils.d.ts"
 }
