--- a/package.json
+++ b/package.json
@@ -67,10 +67,12 @@
     "vite": "^5.3.1",
     "vue-tsc": "^2.0.21"
   },
+  "optionalDependencies": {
+    "clsx": "^2.1.1",
+    "tailwind-merge": "^2.3.0"
+  },
   "dependencies": {
     "@heroicons/vue": "^2.1.3",
-    "clsx": "^2.1.1",
-    "tailwind-merge": "^2.3.0",
     "vue": "^3.3.x"
   }
 }
