--- a/package.json
+++ b/package.json
@@ -60,8 +60,10 @@
     "postcss-selector-parser": "^6.1.0",
     "prettier": "^3.3.2",
     "rollup": "^4.18.0",
+    "rollup-plugin-cleanup": "^3.2.1",
     "rollup-plugin-postcss": "^4.0.2",
     "rollup-plugin-typescript2": "^0.36.0",
+    "rollup-plugin-uglify": "^6.0.4",
     "typescript": "^5.4.5",
     "typescript-eslint": "^7.13.0",
     "vite": "^5.3.1",
