--- a/package.json
+++ b/package.json
@@ -35,46 +35,48 @@
     "url": "https://github.com/Fisht-Org/FishtVue/issues"
   },
   "devDependencies": {
-    "@babel/eslint-parser": "^7.24.7",
-    "@babel/preset-env": "^7.24.7",
+    "@babel/eslint-parser": "^7.25.0",
+    "@babel/preset-env": "^7.25.0",
     "@commitlint/cli": "^19.3.0",
     "@commitlint/config-conventional": "^19.2.2",
     "@rollup/plugin-babel": "^6.0.4",
     "@rollup/plugin-terser": "^0.4.4",
-    "@types/node": "^20.14.2",
-    "@vitejs/plugin-vue": "^5.0.5",
+    "@types/node": "^20.14.12",
+    "@vitejs/plugin-vue": "^5.1.1",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-config-standard": "^17.1.0",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-n": "^16.6.2",
     "eslint-plugin-nuxt": "^4.0.0",
-    "eslint-plugin-prettier": "^5.1.3",
-    "eslint-plugin-promise": "^6.2.0",
-    "eslint-plugin-vue": "^9.26.0",
+    "eslint-plugin-prettier": "^5.2.1",
+    "eslint-plugin-promise": "^6.6.0",
+    "eslint-plugin-vue": "^9.27.0",
     "fs-extra": "^11.2.0",
-    "husky": "^9.0.11",
+    "husky": "^9.1.3",
     "path": "^0.12.7",
-    "postcss": "^8.4.38",
-    "postcss-preset-env": "^9.5.14",
-    "postcss-selector-parser": "^6.1.0",
-    "prettier": "^3.3.2",
-    "rollup": "^4.18.0",
+    "postcss": "^8.4.40",
+    "postcss-preset-env": "^9.6.0",
+    "postcss-selector-parser": "^6.1.1",
+    "prettier": "^3.3.3",
+    "rollup": "^4.19.1",
     "rollup-plugin-cleanup": "^3.2.1",
     "rollup-plugin-postcss": "^4.0.2",
     "rollup-plugin-typescript2": "^0.36.0",
     "rollup-plugin-uglify": "^6.0.4",
-    "typescript": "^5.4.5",
-    "typescript-eslint": "^7.13.0",
-    "vite": "^5.3.1",
-    "vue-tsc": "^2.0.21"
+    "sass": "^1.77.8",
+    "typescript": "^5.5.4",
+    "typescript-eslint": "^7.17.0",
+    "vite": "^5.3.5",
+    "vue-tsc": "^2.0.29"
   },
   "optionalDependencies": {
     "clsx": "^2.1.1",
-    "tailwind-merge": "^2.3.0"
+    "tailwind-merge": "^2.4.0"
   },
   "dependencies": {
-    "@heroicons/vue": "^2.1.3",
-    "vue": "^3.3.x"
+    "@heroicons/vue": "^2.1.5",
+    "tslib": "^2.6.3",
+    "vue": "^3.4.34"
   }
 }
