--- a/package.json
+++ b/package.json
@@ -21,6 +21,10 @@
     "lint": "eslint --fix .",
     "lint:fix": "eslint --fix --ext \".js,.vue\" --ignore-path .gitignore .",
     "patch": "npm version patch",
+    "test": "vitest run",
+    "test:watch": "vitest --watch",
+    "test:unit": "vitest --ui",
+    "coverage": "vitest run --coverage",
     "prepare": "husky install"
   },
   "keywords": [
@@ -35,14 +39,17 @@
     "url": "https://github.com/Fisht-Org/FishtVue/issues"
   },
   "devDependencies": {
-    "@babel/eslint-parser": "^7.25.0",
-    "@babel/preset-env": "^7.25.0",
+    "@babel/eslint-parser": "^7.25.1",
+    "@babel/preset-env": "^7.25.2",
     "@commitlint/cli": "^19.3.0",
     "@commitlint/config-conventional": "^19.2.2",
     "@rollup/plugin-babel": "^6.0.4",
     "@rollup/plugin-terser": "^0.4.4",
-    "@types/node": "^20.14.12",
+    "@types/node": "^20.14.13",
     "@vitejs/plugin-vue": "^5.1.1",
+    "@vitest/coverage-v8": "^2.0.4",
+    "@vitest/ui": "^2.0.4",
+    "@vue/test-utils": "^2.4.6",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-config-standard": "^17.1.0",
@@ -53,7 +60,8 @@
     "eslint-plugin-promise": "^6.6.0",
     "eslint-plugin-vue": "^9.27.0",
     "fs-extra": "^11.2.0",
-    "husky": "^9.1.3",
+    "husky": "^9.1.4",
+    "jsdom": "^24.1.1",
     "path": "^0.12.7",
     "postcss": "^8.4.40",
     "postcss-preset-env": "^9.6.0",
@@ -63,11 +71,11 @@
     "rollup-plugin-cleanup": "^3.2.1",
     "rollup-plugin-postcss": "^4.0.2",
     "rollup-plugin-typescript2": "^0.36.0",
-    "rollup-plugin-uglify": "^6.0.4",
     "sass": "^1.77.8",
-    "typescript": "^5.5.4",
+    "typescript": "^5.4.4",
     "typescript-eslint": "^7.17.0",
     "vite": "^5.3.5",
+    "vitest": "^2.0.4",
     "vue-tsc": "^2.0.29"
   },
   "optionalDependencies": {
