--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "license": "MIT",
   "scripts": {
-    "dev": "vite",
+    "dev-web": "cd web && pnpm dev",
     "preview": "vite preview",
     "build:lib": "NODE_ENV=production rollup -c",
     "pack": "cd dist && npm pack --pack-destination='../'",
