--- a/lib/package.json
+++ b/lib/package.json
@@ -22,11 +22,13 @@
     "component library"
   ],
   "peerDependencies": {
-    "vue": "^3.3.x",
-    "tailwind-merge": "^2.3.x",
-    "clsx": "^2.1.x"
+    "vue": "^3.3.x"
   },
   "dependencies": {
-    "@heroicons/vue": "^2.1.3"
+    "@iconify/vue": "^4.1.2",
+    "@heroicons/vue": "^2.1.3",
+    "epic-spinners": "^2.0.0",
+    "tailwind-merge": "^2.3.x",
+    "clsx": "^2.1.x"
   }
 }
