--- a/lib/package.json
+++ b/lib/package.json
@@ -29,6 +29,8 @@
     "@heroicons/vue": "^2.1.3",
     "epic-spinners": "^2.0.0",
     "tailwind-merge": "^2.3.x",
+    "gsap": "^3.12.5",
+    "lodash": "^4.17.21",
     "clsx": "^2.1.x"
   }
 }
