--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "format": "prettier --write \"**/*.{js,ts,vue,d.ts}\" --cache",
     "format:check": "prettier --check \"**/*.{js,ts,vue,d.ts}\"",
     "lint": "eslint --fix .",
-    "lint:fix": "eslint --fix --ext \".js,.vue\" --ignore-path .gitignore .",
+    "lint:fix": "eslint --fix --ext \".js,.ts,.vue\" --ignore-path .gitignore .",
     "patch": "npm version patch",
     "test": "vitest run",
     "test:watch": "vitest --watch",
@@ -39,52 +39,57 @@
     "url": "https://github.com/Fisht-Org/FishtVue/issues"
   },
   "devDependencies": {
-    "@babel/eslint-parser": "^7.25.1",
-    "@babel/preset-env": "^7.25.2",
-    "@commitlint/cli": "^19.3.0",
-    "@commitlint/config-conventional": "^19.2.2",
+    "@babel/eslint-parser": "^7.25.7",
+    "@babel/preset-env": "^7.25.7",
+    "@commitlint/cli": "^19.5.0",
+    "@commitlint/config-conventional": "^19.5.0",
     "@rollup/plugin-babel": "^6.0.4",
     "@rollup/plugin-terser": "^0.4.4",
-    "@types/node": "^20.14.13",
-    "@vitejs/plugin-vue": "^5.1.1",
-    "@vitest/coverage-v8": "^2.0.4",
-    "@vitest/ui": "^2.0.4",
+    "@types/lodash": "^4.17.10",
+    "@types/node": "^20.16.11",
+    "@vitejs/plugin-vue": "^5.1.4",
+    "@vitest/coverage-v8": "^2.1.2",
+    "@vitest/ui": "^2.1.2",
     "@vue/test-utils": "^2.4.6",
-    "eslint": "^8.57.0",
+    "eslint": "^8.57.1",
     "eslint-config-prettier": "^9.1.0",
     "eslint-config-standard": "^17.1.0",
-    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-n": "^16.6.2",
     "eslint-plugin-nuxt": "^4.0.0",
     "eslint-plugin-prettier": "^5.2.1",
     "eslint-plugin-promise": "^6.6.0",
-    "eslint-plugin-vue": "^9.27.0",
+    "eslint-plugin-vue": "^9.28.0",
     "fs-extra": "^11.2.0",
-    "husky": "^9.1.4",
-    "jsdom": "^24.1.1",
+    "husky": "^9.1.6",
+    "jsdom": "^24.1.3",
     "path": "^0.12.7",
-    "postcss": "^8.4.40",
+    "postcss": "^8.4.47",
     "postcss-preset-env": "^9.6.0",
-    "postcss-selector-parser": "^6.1.1",
+    "postcss-selector-parser": "^6.1.2",
     "prettier": "^3.3.3",
-    "rollup": "^4.19.1",
+    "rollup": "^4.24.0",
     "rollup-plugin-cleanup": "^3.2.1",
     "rollup-plugin-postcss": "^4.0.2",
     "rollup-plugin-typescript2": "^0.36.0",
-    "sass": "^1.77.8",
-    "typescript": "^5.4.4",
-    "typescript-eslint": "^7.17.0",
-    "vite": "^5.3.5",
-    "vitest": "^2.0.4",
-    "vue-tsc": "^2.0.29"
+    "sass": "^1.79.4",
+    "tslib": "^2.7.0",
+    "typescript": "5.4.4",
+    "typescript-eslint": "^7.18.0",
+    "vite": "^5.4.8",
+    "vitest": "^2.1.2",
+    "vue-tsc": "^2.1.6"
   },
   "optionalDependencies": {
     "clsx": "^2.1.1",
-    "tailwind-merge": "^2.4.0"
+    "tailwind-merge": "^2.5.3"
   },
   "dependencies": {
     "@heroicons/vue": "^2.1.5",
-    "tslib": "^2.6.3",
-    "vue": "^3.4.34"
+    "@iconify/vue": "^4.1.2",
+    "epic-spinners": "^2.0.0",
+    "gsap": "^3.12.5",
+    "lodash": "^4.17.21",
+    "vue": "^3.5.11"
   }
 }
