--- a/lib/select/package.json
+++ b/lib/select/package.json
@@ -1,5 +1,5 @@
 {
-  "main": "./Select.mjs",
-  "module": "./Select.mjs",
+  "main": "./select.mjs",
+  "module": "./select.mjs",
   "types": "./Select.d.ts"
 }
